add footer, add homepage responsivity

--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,19 @@
     box-sizing: border-box;
     direction: rtl;
     text-align: right;} 
-    
+
+    .main-container{
+        position: relative;
+  min-height: 100vh;
+    }
+.content-wrap{
+  
+    padding-bottom: 2.5rem;  
+}
+
+.footer-down{
+    position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem; 
+}
