main card rounded circle cards, font logo

--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,11 +1,9 @@
-.smaller-img{
-    width:50%;
+.logo{
+   /* font-family: 'Emilys Candy', cursive; */
+font-family: 'Rufina', serif;
+  
 }
 
-.my-center{
-    text-align: center !important;
-    
-}
 .site-desc{
    margin-bottom:0px;
     max-width: 24rem;
