--- a/src/pages/Teachers.css
+++ b/src/pages/Teachers.css
@@ -11,3 +11,8 @@
     transform: scale(1.05);
  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
+.card-img{
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
+}
