--- a/src/pages/Teachers.css
+++ b/src/pages/Teachers.css
@@ -2,13 +2,13 @@
     border-radius: 4px;
     background: #fff;
     box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
-      transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+      /* transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12); */
   /* padding: 14px 80px 18px 36px; */
   cursor: pointer;
 }
 
 .teacher-card:hover{
-    transform: scale(1.05);
+    /* transform: scale(1.05); */
  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
 .card-img{
@@ -19,24 +19,24 @@
 /*  Small devices (landscape phones, 576px and up) */
 @media (max-width: 575.98px) {
    .card-img{
-  width: 100%;
-  height: 90vw;
-  object-fit: cover;
+    height: 30vw;
 } 
 }
 
  /* Small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) {  
    .card-img{
-  width: 100%;
-  height: 70vw;
-  object-fit: cover;
+    height: 50vw;
 }  }
 
  /* Medium devices (tablets, less than 992px) */
 @media (max-width: 991.98px) { 
   .card-img{
-  width: 100%;
-  height: 50vw;
-  object-fit: cover;
+    height: 80vw;
 }  }
+.show{
+  display:block;
+}
+.hide{
+  display:none;
+}
